# content-downloader

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  capability.json  cookies.json.example  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-scaffold-core/: 01-PLAN-SUMMARY.md  01-VERIFICATION.md  PLAN.md
.planning/phases/02-douyin-adapter/: 02-PLAN-SUMMARY.md  02-VERIFICATION.md  PLAN.md
.planning/phases/03-xhs-adapter/: 03-PLAN-SUMMARY.md  03-VERIFICATION.md  PLAN.md
.planning/phases/04-wechat-oa-adapter/: PLAN-SUMMARY.md  PLAN.md
.planning/phases/05-x-adapter/: 05-PLAN-SUMMARY.md  PLAN.md
content_downloader/: __init__.py  __main__.py  cli.py  manifest.py  models.py  output.py  router.py
content_downloader/adapters/: __init__.py  base.py  fixture.py  stub.py
content_downloader/adapters/douyin/: __init__.py  abogus.py  adapter.py  api_client.py  cookie_manager.py  mapper.py  ms_token.py  xbogus.py
content_downloader/adapters/wechat_oa/: __init__.py  adapter.py  parser.py
content_downloader/adapters/x/: __init__.py  adapter.py  fetcher.py  mapper.py
content_downloader/adapters/xhs/: __init__.py  adapter.py  api_client.py  mapper.py  sidecar.py
content_downloader/tools/: cookie_fetcher.py
references/: README.md
tests/: conftest.py  test_cli.py  test_fixture_adapter.py  test_integration.py  test_manifest.py  test_models.py  test_output.py  test_router.py
tests/adapters/douyin/: test_adapter.py  test_api_client.py  test_mapper.py  test_short_link.py
(+17 files in other folders)
