[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-downloader"
version = "0.1.0"
description = "Unified content downloader with adapter pattern for multiple platforms"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "filelock>=3.13",
    "pyyaml>=6.0",
    "gmssl>=3.2.2",
    "yt-dlp>=2024.0",
]

[project.scripts]
content-downloader = "content_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["content_downloader*"]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=content_downloader --cov-report=term-missing"
